--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -3,17 +3,21 @@
 
   <div class="filter-subtype filter-virus">
     <h5 class="filter-sublabel">cohort</h5>
-    <div class="disclaimer">
+    <div class="disclaimer" matTooltip="learn more about cohorts">
       <!-- 'cohort' indicates  -->
-      suspected infection/exposure, pending diagnostic confirmation
+      <a [routerLink]="['../', 'documentation']" fragment="cohort">
+        suspected infection/exposure, pending diagnostic confirmation
+    </a>
     </div>
     <app-mini-donut [data]="viruses" [height]="plot_height" [cohorts]="all_cohorts" [endpoint]="endpoint"></app-mini-donut>
   </div>
 
   <div class="filter-subtype filter-outcome">
     <h5 class="filter-sublabel">outcome</h5>
-    <div class="disclaimer">
+    <div class="disclaimer" matTooltip="learn more about outcomes">
+      <a [routerLink]="['../', 'documentation']" fragment="outcome">
       survivors were alive 10+ days after hospital admission
+    </a>
     </div>
     <app-mini-barplot [data]="outcomes" [name_var]="'term'" [height]="plot_height" [options]="all_outcomes" [endpoint]="endpoint"></app-mini-barplot>
   </div>
