--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.scss
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.scss
@@ -11,6 +11,7 @@
   & a {
     color: $grey-400;
     cursor: pointer;
+    text-decoration: none;
 
     & :hover {
       text-decoration: underline;
