--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -44,5 +44,5 @@
 
     </div>
   </div>
-  <span *ngIf="schema_dataset"><span *embedJsonld="schema_dataset"></span></span>
+  <span *ngIf="dataset"><span *embedJsonld="dataset"></span></span>
 </div>
