--- a/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
+++ b/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
@@ -1,5 +1,5 @@
 <div class="hla-container patient-data-container">
-  <h4 class="patient-data" id="HLA">HLA</h4>
+  <h4 class="patient-data" id="HLA-sequencing">HLA Sequencing</h4>
 
   <ng-container *ngIf="genotype; else nodata">
     <div class="hla-files">
