fix anchor tag jumping

--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -78,10 +78,18 @@
           </a>
         </div>
 
-        <app-patient-hla [patient]="patient" [files]="HLAFiles"></app-patient-hla>
-        <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles" [patientID]="patient.patientID"></app-patient-viral-seq>
+        <div id="HLA-sequencing">
+          <app-patient-hla [patient]="patient" [files]="HLAFiles"></app-patient-hla>
+        </div>
 
-        <app-patient-serology [patient]="patient"></app-patient-serology>
+        <div id="viral-sequencing">
+          <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles" [patientID]="patient.patientID"></app-patient-viral-seq>
+        </div>
+
+        <div id="Systems-Serology">
+          <app-patient-serology [patient]="patient"></app-patient-serology>
+        </div>
+
       </div>
     </div>
   </div>
