--- a/sample-viewer/src/app/patient-page/patient-serology/patient-serology.component.html
+++ b/sample-viewer/src/app/patient-page/patient-serology/patient-serology.component.html
@@ -1,4 +1,4 @@
-<h4 class="patient-data" id="Systems-Serology">Systems Serology</h4>
+<h4 class="patient-data">Systems Serology</h4>
 
 
 <ng-container *ngIf="data; else nodata">
