--- a/sample-viewer/src/app/admin/login/login.component.html
+++ b/sample-viewer/src/app/admin/login/login.component.html
@@ -10,9 +10,17 @@
 
 <ng-template #gotologin>
   <h2>Login to continue</h2>
-  <p>
+
+  <p *ngIf="environment && environment.production === false">
+    <span class="dev-warning">Access to the development server is restricted to the CViSB dev team.</span>
+     Please visit <a href="https://data.cvisb.org/home">data.cvisb.org</a> to view the most recent data.
+  </p>
+
+
+  <p *ngIf="environment && environment.production === true">
     Access to {{ page === "/" ? "parts of this site": page }} is restricted to CViSB users. Please login.
   </p>
+
 
   <p>{{ message ? message : '' }}</p>
 
