--- a/sample-viewer/src/app/admin/funding/funding.component.html
+++ b/sample-viewer/src/app/admin/funding/funding.component.html
@@ -1,6 +1,6 @@
 <div class="about-group">
   <h4>Funding sources</h4>
   <p>
-    CViSB is supported by the National Institutes for Health.
+    CViSB is supported by the National Institutes for Health (grant U19AI135995).
   </p>
 </div>
