--- a/sample-viewer/src/app/home/home.component.scss
+++ b/sample-viewer/src/app/home/home.component.scss
@@ -202,7 +202,7 @@ i.section-icon {
 .about-title {
   display: flex;
   width: 125px;
-  align-content: end;
+  align-content: flex-end;
   text-transform: uppercase;
   font-size: 0.9em;
   font-weight: 400;
