--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -72,7 +72,7 @@
 
       <div>
         <div class="section-subtitle">
-          demographic and clinical data
+          view and download demographic and clinical data
         </div>
         <ul>
           <li>
@@ -97,7 +97,7 @@
         Samples
       </div>
       <div class="section-subtitle">
-        metadata for biological samples
+        view and download metadata for biological samples
       </div>
     </a>
 
@@ -111,7 +111,7 @@
       What we study
     </div>
     <div class="description">
-      We're studying two viral hemorrhagic fevers: Lassa mammarenavirus and Ebola virus.
+      We're studying two viral hemorrhagic fevers, Lassa mammarenavirus and Ebola virus, in people suspected of being exposed to the viruses, as well as in their animal reservoirs.
     </div>
   </div>
 
@@ -122,7 +122,7 @@
     <div class="description">
       The majority of our data is provided to CViSB through a partnership with the Kenema Government hospital (KGH) in Sierra Leone.
       KGH is home to Sierra Leone's only Lassa fever isolation ward, which was also used during the 2014-2016 West African Ebola outbreak to treat Ebola.
-      We have analyzed samples from additional partners in Nigeria at the (hospital name) and have curated publically available data on patients in Liberia, Guinea, and other countries
+      We have also analyzed samples from additional partners in Nigeria at the Irrua Specialist Teaching Hospital and have curated publically available data on patients in Liberia, Guinea, and other countries.
     </div>
   </div>
 
