--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -48,12 +48,12 @@
         </div>
         <ul>
 
-          <a [routerLink]='["/dataset", "hla"]'>
+          <a [routerLink]='["/dataset/hla"]' queryParamsHandling="preserve">
             <li>
               HLA Genotypes
             </li>
           </a>
-          <a [routerLink]='["/dataset", "viralseq"]'>
+          <a [routerLink]='["/dataset/viralseq"]' queryParamsHandling="preserve">
             <li>
               Viral Sequencing
             </li>
