--- a/sample-viewer/src/app/admin/about-data/about-data.component.html
+++ b/sample-viewer/src/app/admin/about-data/about-data.component.html
@@ -27,7 +27,7 @@
 
   <h4>Where do our data come from?</h4>
   <p>
-    The majority of our data is provided to CViSB through a partnershup with the Kenema Government hospital (KGH) in Sierra Leone. KGH is home to Sierra Leone's only Lassa fever isolation ward, which was used during the 2014-2016 West African Ebola outbreak
+    The majority of our data is provided to CViSB through a partnership with the Kenema Government hospital (KGH) in Sierra Leone. KGH is home to Sierra Leone's only Lassa fever isolation ward, which was used during the 2014-2016 West African Ebola outbreak
     to treat Ebola as well. Read more about the
     <a href="https://www.nature.com/news/infectious-disease-ebola-s-lost-ward-1.15990" rel="noreferrer" target="_blank">
       isolation ward in the height of the Ebola outbreak
