--- a/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
+++ b/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
@@ -1,5 +1,5 @@
 <div class="filter filter-expts container-column" *ngIf="expts">
-  <h4 class="filter-label">experiment type</h4>
+  <h4 class="filter-label">experiment data</h4>
 
   <div class="expt-container">
     <div class="filter-pair expt-type mat-shadow" *ngFor="let expt of expts; let idx = index" (click)="filterExpt(idx)"
