--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -38,9 +38,9 @@
   </div>
 
 
-  <div class="filter-item filter-timepoints">
+  <!-- <div class="filter-item filter-timepoints">
     <app-filter-sample-timepoints endpoint="patient"></app-filter-sample-timepoints>
-  </div>
+  </div> -->
 
   <div class="filter-item filter-ctry">
     <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location>
