temp removing filters

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -28,10 +28,13 @@
   </div>
 
 
-  <div class="filter-item filter-timepoints">
+  <!-- <div class="filter-item filter-timepoints">
     <app-filter-sample-timepoints endpoint="patient"></app-filter-sample-timepoints>
-  </div>
+  </div> -->
 
+  <div class="filter-item filter-ctry">
+    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location>
+  </div>
 
   <div class="filter-wide-container container-column">
     <div class="filter-item filter-elisas">
@@ -43,8 +46,4 @@
     </div>
   </div>
 
-
-  <div class="filter-item filter-ctry">
-    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="all_countries"></app-filter-location>
-  </div>
 </div>
