--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -26,9 +26,9 @@
     <app-filter-sample-group></app-filter-sample-group>
   </div>
 
-  <div class="filter-item filter-sample-timepoints">
+  <!-- <div class="filter-item filter-sample-timepoints">
     <app-filter-sample-timepoints [endpoint]="'sample'"></app-filter-sample-timepoints>
-  </div>
+  </div> -->
 
   <div class="filter-item filter-patients">
     <app-filter-patient-id [all_patients]="patients" [patients]="patients" endpoint="sample"></app-filter-patient-id>
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-  <div class="filter-item filter-dates">
+  <!-- <div class="filter-item filter-dates">
     <app-filter-sample-year [data]="years" [yearDomain]="[2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019]" endpoint="sample"></app-filter-sample-year>
-  </div>
+  </div> -->
 
 
   <div class="filter-item filter-ctry">
