--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -10,18 +10,17 @@
         <ng-container *ngIf="simplifiedCitation === false; else firstAuthor">
           <span *ngFor="let author of citation.author; let i=index" class="author">
             {{author.givenName}} {{author.familyName}}<span>{{i === citation.author.length - 1 ? '. ' : ','}}</span>
-          </span>
+          </span>  <span id="journal"><i>{{citation.journalName}}</i></span>
         </ng-container>
 
         <ng-template #firstAuthor>
           <a [href]="citation.url" target="_blank" rel="noreferrer">
             {{citation.author[0].givenName}} {{citation.author[0].familyName}}
             <i>et al.</i>
-          </a>
+          </a>  <span id="journal"><i>{{citation.journalNameAbbrev}}</i></span>
         </ng-template>
       </span>
 
-      <span id="journal"><i>{{citation['container-title']}}</i></span>
       <span id="date" *ngIf="citation.datePublished">{{citation.datePublished}}</span>,
 
       <span id="vol">{{citation.volumeNumber}}</span>, <span id="issue">{{citation.issueNumber}}</span>, <span id="page">{{citation.pagination}}</span>.
