--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -6,19 +6,24 @@
           <span [outerHTML]="citation.name"></span>
         </a>.
       </span>
-      <span id="authors">
-        <ng-container *ngIf="simplifiedCitation === false; else firstAuthor">
+      <ng-container *ngIf="simplifiedCitation === false; else firstAuthor">
+        <span id="authors">
           <span *ngFor="let author of citation.author; let i=index" class="author">
             {{author.givenName}} {{author.familyName}}<span>{{i === citation.author.length - 1 ? '. ' : ','}}</span>
-          </span>  <span id="journal"><i>{{citation.journalName}}</i></span>
-        </ng-container>
+          </span>
+        </span>
+        <span id="journal"><i>{{citation.journalName}}</i></span>
+      </ng-container>
 
-        <ng-template #firstAuthor>
+      <ng-template #firstAuthor>
+        <span id="authors">
           <a [href]="citation.url" target="_blank" rel="noreferrer">
             {{citation.author[0].givenName}} {{citation.author[0].familyName}}
             <i>et al.</i>
-          </a>  <span id="journal"><i>{{citation.journalNameAbbrev}}</i></span>
-        </ng-template>
+          </a>
+        </span>
+        <span id="journal"><i>{{citation.journalNameAbbrev}}</i></span>
+      </ng-template>
       </span>
 
       <span id="date" *ngIf="citation.datePublished">{{citation.datePublished}}</span>,
